# knowledgecore

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  pnpm-lock.yaml
.codex/: codex-os.manifest.json  commands.md  setup.sh  verify.commands
.codex/actions/: _artifact_env.sh  build.sh  dev-lean.sh  lint.sh  test.sh
.codex/bootstrap/: tests-docs.v1.json
.github/workflows/: ci.yml  security-audit.yml
.perf-baselines/: build-time.json  bundle.json
apps/desktop/ui/: package.json
apps/desktop/ui/src/state/: featureState.ts
apps/desktop/ui/test/: features.test.ts
crates/kc_ask/: Cargo.toml
crates/kc_cli/: Cargo.toml
crates/kc_core/: Cargo.toml
crates/kc_extract/: Cargo.toml
crates/kc_index/: Cargo.toml
crates/kc_index/src/: vector.rs
knowledgecore-docpack/: AGENTS.md
knowledgecore-docpack/docs/: 17-project-closeout-report.md  18-post-stabilization-baseline-2026-04-26.md
scripts/: audit-rust.mjs  clean-heavy-artifacts.sh  clean-repro-caches.sh  run-dev-lean.sh  size-audit.sh
scripts/git/: guard-branch.sh  guard-secrets.sh
scripts/perf/: bundle-report.mjs  check-assets.sh  compare-metric.mjs  measure-build-time.mjs  memory-smoke.mjs  summarize.mjs
scripts/perf/db/: check-pg-stat.sql
security/: DEPENDENCY_MIGRATION.md  rustsec-policy.json
