[workspace]
members = [
  "crates/kc_core",
  "crates/kc_extract",
  "crates/kc_index",
  "crates/kc_ask",
  "crates/kc_cli",
  "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
blake3 = "1.8"
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.39", features = ["bundled-sqlcipher-vendored-openssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18", features = ["v4", "serde"] }
