[package]
name = "kc_ask"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kc_core = { path = "../kc_core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
jsonschema = "0.46"
tempfile = "3.23"
