[package]
name = "kc_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aws-config = "1.8"
aws-sdk-kms = { version = "1.100", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-s3 = { version = "1.115", default-features = false, features = ["default-https-client", "http-1x", "rt-tokio", "sigv4a"] }
aws-sdk-secretsmanager = { version = "1.100", default-features = false, features = ["default-https-client", "rt-tokio"] }
argon2 = "0.5"
blake3.workspace = true
chacha20poly1305 = "0.10"
ed25519-dalek = "2.2"
getrandom = "0.4"
regex = "1.12"
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
tokio = { version = "1.48", features = ["rt-multi-thread"] }
uuid.workspace = true
walkdir = "2.5"
zip = { version = "8.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
criterion = "0.8"
jsonschema = "0.42"
tempfile = "3.23"

[[bench]]
name = "core_bench"
harness = false
