[package]
name = "kc_index"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arrow-array = "58.1"
arrow-schema = "57.0"
futures = "0.3"
kc_core = { path = "../kc_core" }
lancedb = "0.27"
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.48", features = ["rt"] }

[dev-dependencies]
criterion = "0.8"
tempfile = "3.23"

[[bench]]
name = "index_bench"
harness = false
